# ML

./: pyproject.toml
EDA/: pyproject.toml
EDA/eda/: EDA_Packages.ipynb  data_cleanning_imputation.ipynb  detect_remove_outliers.ipynb  eda_into_action.ipynb  getting_to_know_dataset.ipynb  relationships_in_data.ipynb
supv_learning_sklearn/: pyproject.toml
supv_learning_sklearn/supv_learning_sklearn/: classification.ipynb  model_fine_tuning.ipynb  preprocessing_pipeline.ipynb  regression.ipynb
