[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
jupyter-summarytools = "^0.2.3"
sweetviz = "^2.3.1"
summarytools = "^0.3.0"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
