[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-summarytools = "^0.2.3"
sweetviz = "^2.3.1"
seaborn = "^0.13.2"
summarytools = "^0.3.0"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
